<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8DF9B"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:background="#F8DF9B"
        app:layout_constraintEnd_toStartOf="@+id/page_title"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/page_title"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="#654900"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="597dp"
        android:layout_below="@+id/page_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="69dp"
        android:background="#FFFFFF">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/page_subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elegantTextHeight="true"
                android:padding="@dimen/padding_regular"
                android:text="@string/page_subtitle1"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_conversion_absoluteHeight="29dp"
                tools:layout_conversion_absoluteWidth="411dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="65dp" />

            <TextView
                android:id="@+id/sub1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/sub1_text"
                android:textColor="#BA000000"
                tools:layout_conversion_absoluteHeight="200dp"
                tools:layout_conversion_absoluteWidth="411dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="94dp" />

            <TextView
                android:id="@+id/page_subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elegantTextHeight="true"
                android:freezesText="false"
                android:padding="@dimen/padding_regular"
                android:text="@string/page_subtitle2"
                android:textAllCaps="false"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_conversion_absoluteHeight="29dp"
                tools:layout_conversion_absoluteWidth="411dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="294dp" />

            <TextView
                android:id="@+id/sub2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/sub2_text"
                android:textColor="#BA000000"
                tools:layout_conversion_absoluteHeight="118dp"
                tools:layout_conversion_absoluteWidth="411dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="323dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>